--- a/public/index.html
+++ b/public/index.html
@@ -7,38 +7,41 @@
 </head>
 <body class="text-gray-600 font-body">
 
-  <div>
-    <div>
+  <div class="grid md:grid-cols-3">
+    <div class="md:col-span-1">
       <nav>
         <div>
           <h1 class="font-bold uppercase border-b border-gray-200">
-            <a href="/">Food Ninja</a>
+            <a href="/" class="hover:text-gray-400">Food Ninja</a>
           </h1>
         </div>
         <ul>
           <li class="text-gray-700 font-bold">
             <a href="#">
               <span>Home</span>
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
             </a>
           </li>
           <li>
             <a href="#">
               <span>About</span>
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             </a>
           </li>
           <li>
             <a href="#">
               <span>Contact</span>
+              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
             </a>
           </li>
         </ul>
       </nav>
     </div>
   
-    <main class="px-16 py-6 bg-gray-300">
+    <main class="px-16 py-6 bg-gray-300 md:col-span-2">
       <div class="flex justify-center md:justify-end">
-        <a href="#" class="text-primary">Log in</a>
-        <a href="#" class="text-primary ml-2">Sign up</a>
+        <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
+        <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white ml-2">Sign up</a>
       </div>
 
       <header>
@@ -49,35 +52,38 @@
       <div>
         <h4 class="font-bold pb-2 mt-12 border-b border-gray-200">Latest Recipes</h4>
   
-        <div class="mt-8">
+        <div class="mt-8 grid lg:grid-cols-3 gap-10">
           <!-- cards go here -->
-          <div class="card"> 
+          <div class="card hover:shadow-xl"> 
             <img src="img/stew.jpg" alt="stew" class="h-32 md:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">5 Bean Chili Stew</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
             </div>
-            <div class="badge">
+            <div class="badge flex items-center">
+              <svg class="w-5 h-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
               <span>15 mins</span>
             </div>
           </div>
-          <div class="card"> 
+          <div class="card hover:shadow-xl"> 
             <img src="img/noodles.jpg" alt="noodles" class="h-32 md:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Yummy Vegetables Noodle</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
             </div>
-            <div class="badge">
+            <div class="badge flex items-center">
+              <svg class="w-5 h-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
               <span>10 mins</span>
             </div>
           </div>
-          <div class="card"> 
+          <div class="card hover:shadow-xl"> 
             <img src="img/curry.jpg" alt="curry" class="h-32 md:h-48 w-full object-cover">
             <div class="m-4">
               <span class="font-bold">Hot and Tasty Pork Curry</span>
               <span class="block text-gray-500 text-sm">Recipe by Mario</span>
             </div>
-            <div class="badge">
+            <div class="badge flex items-center">
+              <svg class="w-5 h-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
               <span>7 mins</span>
             </div>
           </div>
@@ -91,7 +97,7 @@
       </div>
 
       <div class="mt-12 flex justify-center">
-        <div class="bg-secondary-100 text-secondary-200">Load more</div>
+        <div class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner">Load more</div>
       </div>    
     </main>
   </div>
